# CMakeCatch2AndGccDemo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
Lib/: CMakeLists.txt
Lib/inc/: TE_Float.h  libFunctions.h
Lib/src/: libFunctions.cpp
Lib/test/: test_libFunctions.cpp  test_main.cpp
MainCode/: CMakeLists.txt
MainCode/inc/: functions.h
MainCode/src/: functions.cpp  main.cpp
MainCode/test/: test_functions.cpp
Scripts/: GccCompileProject.bat  GccRunMain.bat  GccRunTestCases.bat
